--- a/markconsume.tex
+++ b/markconsume.tex
@@ -146,34 +146,34 @@ and evaluates each against a set of representative use cases.
  2   int a;
  3   int b;
  4   int c;
- 5 };
- 6
- 7 struct rcutest1 {
- 8   int a;
- 9   struct rcutest rt;
-10 };
-11
-12 std::atomic<rcutest *> gp;
-13 std::atomic<rcutest1 *> g1p;
-14 std::atomic<int *> gip;
-15 struct rcutest *gslp; /* Global scope, local usage. */
-16 std::atomic<rcutest *> gsgp;
-17
-18 #define rcu_assign_pointer(p, v) \
-19   atomic_store_explicit(&(p), (v),
-20                         std::memory_order_release);
-21 #define rcu_dereference(p) \
-22   atomic_load_explicit(&(p), std::memory_order_consume);
+ 5   spinlock_t lock;
+ 6 };
+ 7
+ 8 struct rcutest1 {
+ 9   int a;
+10   struct rcutest rt;
+11 };
+12
+13 std::atomic<rcutest *> gp;
+14 std::atomic<rcutest1 *> g1p;
+15 std::atomic<int *> gip;
+16 struct rcutest *gslp; /* Global scope, local usage. */
+17 std::atomic<rcutest *> gsgp;
+18
+19 #define rcu_assign_pointer(p, v) \
+20   atomic_store_explicit(&(p), (v),
+21                         std::memory_order_release);
+22 #define rcu_dereference(p) \
+23   atomic_load_explicit(&(p), std::memory_order_consume);
 \end{verbatim}
 }
 \caption{Common Definitions}
 \label{fig:Common Definitions}
 \end{figure}
 
-This section will presnt common definitions (see
-Figure~\ref{fig:Common Definitions})
-several use cases shown in the list below,
-and finally evaluation criteria.
+This section uses the common definitions shown in
+Figure~\ref{fig:Common Definitions}
+to discuss the use cases in the following list:
 
 \begin{enumerate}
 \item	Simple case.
@@ -187,7 +187,8 @@ and finally evaluation criteria.
 \item	Examples involving handoff to locking.
 \end{enumerate}
 
-Each of the above use cases is covered in one of the following sections.
+Each of the above use cases is covered in one of the following sections,
+followed by a discussion of evaluation criteria.
 
 \subsection{Simple Case}
 \label{sec:Simple Case}
@@ -405,7 +406,8 @@ but where they are different chains.
 
 Figure~\ref{fig:Chain Fanning Out}
 shows a dependency chain fanning out, courtesy of the \co{thread1()}
-function's calls to \co{thread1_help1()} and \co{thread1_help2()}.
+function's calls to \co{thread1_help1()} and \co{thread1_help2()}
+on lines~30 and~31.
 This is a common pattern in the Linux kernel, as it supports
 abstraction of data structures, for example, allowing common RCU-protected
 data structures to be aggregated into a larger RCU-protected data
@@ -467,7 +469,7 @@ another.
 
 Figure~\ref{fig:Chain Fanning In}
 demonstrates different dependency chains fanning into the same function,
-in this case \co{thread1_help()}.
+in this case \co{thread1_help()}, from lines~29 and~37.
 This fanning-in is also used to support abstraction, for example,
 allowing a given implementation of an RCU-protected data structure
 to be aggregated into several different data structures.
@@ -540,8 +542,11 @@ to be aggregated into several different data structures.
 \end{figure}
 
 Figure~\ref{fig:Chain Fanning In and Out}
-shows dependency chains fanning both in and out,
-which permits composition of the types of abstraction
+shows dependency chains fanning both in and out, starting
+at lines~45 and~53, fanning into \co{thread1_help()}, and
+fanning out again at the call to \co{thread1a_help()} on
+line~36 and to \co{thread1b_help()} on line~37.
+This combination permits composition of the types of abstraction
 described in
 Sections~\ref{sec:Chain Fanning Out}
 and~\ref{sec:Chain Fanning In}.
@@ -549,8 +554,129 @@ and~\ref{sec:Chain Fanning In}.
 \subsection{Conditional Compilation of Chain Endpoints}
 \label{sec:Conditional Compilation of Chain Endpoints}
 
+\begin{figure}[tbp]
+{ \scriptsize
+\begin{verbatim}
+ 1 void thread0(void)
+ 2 {
+ 3   struct rcutest *p;
+ 4   struct rcutest1 *p1;
+ 5
+ 6   p = (struct rcutest *)malloc(sizeof(*p));
+ 7   assert(p);
+ 8   p->a = 42;
+ 9   p->b = 43;
+10   rcu_assign_pointer(gp, p);
+11
+12   p1 = (struct rcutest *)malloc(sizeof(*p1));
+13   assert(p1);
+14   p1->a = 41;
+15   p1->rt->a = 42;
+16   p1->rt->b = 43;
+17   rcu_assign_pointer(g1p, p1);
+18 }
+19
+20 #ifdef FOO
+21 void
+22 thread1a_help(struct rcutest *q)
+23 {
+24   assert(q->a == 42);
+25 }
+26 #endif
+27
+28 void
+29 thread1b_help(struct rcutest *q)
+30 {
+31   assert(q->b == 43);
+32 }
+33
+34 void
+35 thread1_help(struct rcutest *q)
+36 {
+37   if (q) {
+38 #ifdef FOO
+39     thread1a_help(q);
+40 #endif
+41     thread1b_help(q);
+42   }
+43 }
+44
+45 void thread1(void)
+46 {
+47   struct rcutest *p;
+48
+49   p = rcu_dereference(gp);
+50   thread1_help(p);
+51 }
+52
+53 void thread2(void)
+54 {
+55   struct rcutest1 *p1;
+56
+57   p1 = rcu_dereference(g1p);
+58   thread1_help(&p1->rt);
+59 }
+\end{verbatim}
+}
+\caption{Conditional Compilation of Chain Endpoints}
+\label{fig:Conditional Compilation of Chain Endpoints}
+\end{figure}
+
+Although the C preprocessor does not necessarily have the best reputation
+among the various aspects of either C or C++, it is true that it is
+always there when you need it.
+Figure~\ref{fig:Conditional Compilation of Chain Endpoints}
+applies conditional compilation to
+Figure~\ref{fig:Chain Fanning In and Out},
+so that portions of the dependency chain can come and go, depending
+on the value of the C-preprocessor macro \co{FOO}.
+
 \subsection{Handoff to Locking}
 \label{sec:Handoff to Locking}
+
+\begin{figure}[tbp]
+{ \scriptsize
+\begin{verbatim}
+ 1 void thread0(void)
+ 2 {
+ 3   struct rcutest *p;
+ 4
+ 5   p = (struct rcutest *)malloc(sizeof(*p));
+ 6   assert(p);
+ 7   p->a = 42;
+ 8   assert(p->a != 43);
+ 9   rcu_assign_pointer(gp, p);
+10 }
+11
+12 void thread1(void)
+13 {
+14   struct rcutest *p;
+15
+16   p = rcu_dereference(gp);
+17   if (p) {
+18     assert(p->a >= 42);
+19     spin_lock(&p->lock);
+20     p->a++;
+21     spin_unlock(&p->lock);
+22   }
+23 }
+\end{verbatim}
+}
+\caption{Handoff to Locking}
+\label{fig:Handoff to Locking}
+\end{figure}
+
+Figure~\ref{fig:Handoff to Locking}
+shows how RCU protection can hand off to other synchronization
+primitives, in this case, locking.
+The dependency chain starts at line~16 and continues through line~18
+and~19.
+However, once line~19 has completed, the code is under the protection
+of \co{p->lock}.
+This lock protects the increment on line~20.
+
+It is also possible to hand off protection from RCU to reference counting,
+explicit memory barriers, transactional memory, and so on.
 
 \subsection{Evaluation Criteria}
 \label{sec:Evaluation Criteria}
