--- a/markconsume.tex
+++ b/markconsume.tex
@@ -680,7 +680,7 @@ It is also possible to hand off protection from RCU to reference counting,
 explicit memory barriers, transactional memory, and so on.
 
 Note that the \co{std::kill_dependency()} on line~20 will typically have
-no effect on code generation in this case.
+no effect on code generation.
 
 \subsection{Evaluation Criteria}
 \label{sec:Evaluation Criteria}
