Add a few marking techniques
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markconsume.tex
+++ b/markconsume.tex
@@ -697,11 +697,35 @@ no effect on code generation.
 \section{Marking Proposals}
 \label{sec:Marking Proposals}
 
+The following sections present alternative marking proposals.
+Whatever proposal is chosen, implementors are encouraged to provide
+a means (for example, a command-line argument) to cause the
+implementation to act as if markings were placed everywhere they
+could reasonably be placed.
+This approach permits unmarked programs containing dependency chains
+to be handled in a reasonably natural manner.
+
 \subsection{Mark Translation Unit}
 \label{sec:Mark Translation Unit}
 
+Within the language, translation-unit marking could be accomplished by
+a pragma or by a language feature that changed the way pointers are
+implemented.
+A compiler command-line argument could also be used, but this is of
+course outside the standard.
+It would be desirable for marked translation units to be able to
+be linked with unmarked translation units.
+
+This approach could be useful in cases where only a few of the translation
+units contain dependency chains.
+However, software-engineering considerations would likely cause many such
+projects to mark all the translation units.
+
 \subsection{Mark Range of Code}
 \label{sec:Mark Range of Code}
+
+Ranges of code could be marked by pragmas, through use of C preprocessor
+symbols, or via other ad-hoc means.
 
 \subsection{Mark Functions}
 \label{sec:Mark Functions}
