Fix "enscapsuulation" typo
Reported-by: JF Bastien <jfb@google.com>
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markconsume.tex
+++ b/markconsume.tex
@@ -309,7 +309,7 @@ Figure~\ref{fig:Out via Function Return}
 shows a dependency chain exiting a function.
 It starts at line~21, is returned to line~20, and
 terminates on line~22.
-This is also a common enscapsuulation technique.
+This is also a common encapsulation technique.
 
 \subsection{In and Out, But Different Chains}
 \label{sec:In and Out, But Different Chains}
