Record Jacksonville discussion about root/leaf marking
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markrootleaf.tex
+++ b/markrootleaf.tex
@@ -16,3 +16,7 @@ in the source code will fall afoul of these requirements.
 One approach is to use a unique identifier for each dependency tree,
 and associate each relevant point in the code with the corresponding
 identifiers.
+
+Note that the root-leaf information could in theory be extracted by
+the compiler based on object markings
+(see Section~\ref{sec:Mark Objects}).
